# CustomSTL

./: .dockerignore  .gitignore  Allocator.h  Array.h  BaseIterator.h  CMakeLists.txt  Common.h  CustomSTL.cpp  Deque.h  DequeList.h  Dockerfile.linux  Function.h  HashTable.h  Jenkinsfile  LinkedList.h  List.h  Map.h  Node.h  Pair.h  Queue.h  QueueNode.h  README.md  RUN_TESTS.bat  RUN_TESTS.sh  SearchTree.h  Set.h  String.h  TODO.txt  Testing.h  Tuple.h  UnorderedMap.h  UnorderedSet.h  Utility.h  Vector.h  dockerfile.linux
app/: CMakeLists.txt  main.cpp
cmake/: fetch_googletest.cmake  internal_utils.cmake
code/: CMakeLists.txt  c_algorithm.h  c_array.h  c_barrier.h  c_bitset.h  c_chrono.h  c_complex.h  c_condition_variable.h  c_counting_semaphore.h  c_deque.h  c_functional.h  c_iterator.h  c_limits.h  c_list.h  c_map.h  c_memory.h  c_mutex.h  c_numbers.h  c_numeric.h  c_pair.h  c_queue.h  c_ratio.h  c_set.h  c_shared_mutex.h  c_stack.h  c_string_view.h  c_thread.h  c_tuple.h  c_type_traits.h  c_unordered_map.h  c_unordered_set.h  c_utility.h  c_vector.h  x_char_traits.h  x_chrono.h  x_functional.h  x_iterator.h  x_lock.h  x_memory.h  x_node.h  (+3 more)
code/stl/: CMakeLists.txt  cAlgorithm.h  cArray.h  cBarrier.h  cBit.h  cBitset.h  cChrono.h  cComplex.h  cConditionVariable.h  cDeque.h  cForwardList.h  cFunctional.h  cIterator.h  cLimits.h  cList.h  cMap.h  cMemory.h  cMutex.h  cNumbers.h  cNumeric.h  cPair.h  cQueue.h  cRatio.h  cSemaphore.h  cSet.h  cSharedMutex.h  cStack.h  cString.h  cStringView.h  cThread.h  cTuple.h  cTypeTraits.h  cUnorderedMap.h  cUnorderedSet.h  cUtility.h  cVector.h  c_algorithm.h  c_array.h  c_barrier.h  c_bit.h  (+56 more)
code/testing/: CMakeLists.txt  Testing.cpp  Testing.h  TestingBoost.cpp  TestingBoost.h  __CTMCommonInclude.h  __CTMThreadInclude.h  __STDCommonInclude.h  __STDThreadInclude.h
code_cpp/: c_algorithm.h  c_bit.h  c_deque.h  c_limits.h  c_map.h  c_string.h  c_string_view.h  c_type_traits.h  x_hash_table.h  x_lock.h
config/: CMakeLists.txt
configuration/: CMakeLists.txt  Config.hpp.in  CustomSTLConfig.hpp.in
custom_stl_c/: CMakeLists.txt
custom_stl_c/include/: CMakeLists.txt
custom_stl_c/include/custom/: __c_core.h  _c_core.h  _c_node.h  _c_stlcore.h  c_list.h  c_pair.h  c_priority_queue.h  c_queue.h  c_stack.h  c_utility.h  c_vector.h
custom_stl_c/include/stl_c/: y_core.h
custom_stl_c/test/: CMakeLists.txt  c_priority_queue_test.cpp  custom_c_list_test.c  custom_c_list_test.cpp  custom_c_pair_test.c  custom_c_priority_queue_test.c  custom_c_priority_queue_test.cpp  custom_c_queue_test.c  custom_c_queue_test.cpp  custom_c_stack_test.c  custom_c_stack_test.cpp  custom_c_vector_test.c  custom_c_vector_test.cpp
custom_stl_cpp/: CMakeLists.txt
custom_stl_cpp/include/: CMakeLists.txt
custom_stl_cpp/include/custom/: __core.h  _char_traits.h  _chrono_utils.h  _functional_utils.h  _hash_table.h  _iterator_utils.h  _lock.h  _memory_utils.h  _node.h  _search_tree.h  _string_utils.h  algorithm.h  array.h  barrier.h  bit.h  bitset.h  chrono.h  complex.h  condition_variable.h  counting_semaphore.h  deque.h  forward_list.h  functional.h  iterator.h  limits.h  list.h  map.h  memory.h  mutex.h  numbers.h  numeric.h  pair.h  queue.h  ratio.h  set.h  shared_mutex.h  stack.h  string.h  string_view.h  thread.h  (+6 more)
custom_stl_cpp/include/stl_cpp/: c_algorithm.h  c_array.h  c_barrier.h  c_bit.h  c_bitset.h  (+40 more)
custom_stl_cpp/test/: CMakeLists.txt  c_thread_test.cpp  c_vector_test.cpp  custom_thread_test.cpp  custom_unordered_map_test.cpp  custom_unordered_set_test.cpp  custom_vector_test.cpp
doc/: gtest_info.h  msvc_includes.7z
documentation/cmake docs/: Commands.txt  ProjectSetup.txt
documentation/vscode setup/: c_cpp_properties.txt  settings.txt
helpers/msvc docs/: algorithm.h  memory.h  ratio.h  unordered_map.h  unordered_set.h  xhash.h
helpers/old/: function.h
helpers/others/: function.h
include/: Algorithm.h  Allocator.h  Array.h  Barrier.h  Chrono.h  Common.h  ConditionVariable.h  Deque.h  Function.h  Functional.h  HashTable.h  Iterator.h  Limits.h  List.h  Map.h  Memory.h  Mutex.h  Node.h  Numeric.h  Pair.h  Queue.h  Ratio.h  SearchTree.h  Semaphore.h  Set.h  Stack.h  String.h  Testing.h  Thread.h  Tuple.h  TypeInfo.h  TypeTraits.h  UnorderedMap.h  UnorderedSet.h  Utility.h  Vector.h  __LocalTestingInclude.h  __STDTestingInclude.h  __Testing.h  xHashTable.h  (+3 more)
include/Testing/: __LocalTestingInclude.h  __LocalTestingThreadInclude.h  __STDTestingThreadInclude.h  __Testing.h  __TestingThread.h  __xTesting.h
myproject/include/: Algorithm.h  Array.h  Barrier.h  Bit.h  Bitset.h  Chrono.h  Complex.h  ConditionVariable.h  Deque.h  ForwardList.h  Functional.h  Iterator.h  Limits.h  List.h  Map.h  Memory.h  Mutex.h  Numeric.h  Pair.h  Queue.h  Ratio.h  Semaphore.h  Set.h  Stack.h  String.h  Thread.h  Tuple.h  TypeTraits.h  UnorderedMap.h  UnorderedSet.h  Utility.h  Vector.h  xChrono.h  xCommon.h  xFunctional.h  xHashTable.h  xLock.h  xMemory.h  xNode.h  xSearchTree.h  (+2 more)
myproject/source/: CustomSTL.cpp  Main.cpp
obsolete/: Testing.cpp  Testing.h  TestingBoost.cpp  TestingBoost.h  __CTMCommonInclude.h  __CTMThreadInclude.h
source/: CustomSTL.cpp
test/: CMakeLists.txt  c_thread_test.cpp  c_vector_test.cpp
test/app/: CMakeLists.txt  test_main.cpp
test/code/: CMakeLists.txt  Testing.cpp  TestingBoost.h  __CTMCommonInclude.h
testing/include/: Testing.h  TestingBoost.h  TestingCommon.h  TestingThread.h  __CTMCommonInclude.h  __CTMThreadInclude.h  __STDCommonInclude.h
testing/source/: Testing.cpp  TestingBoost.cpp  TestingCommon.cpp  TestingThread.cpp
try/config/: CMakeLists.txt
try/custom_stl_c/: CMakeLists.txt
(+34 files in other folders)
